fix UI review comments for - not center search bar icons - search button with white box on the bg - fix overlap the main form items in upload map template screen

--- a/web/client/themes/default/less/navbar.less
+++ b/web/client/themes/default/less/navbar.less
@@ -65,7 +65,6 @@ ol {
 }
 
 #mapstore-navbar-container {
-    height: 40px;
     .nav {
         &.pull-left {
             display: flex;
@@ -81,7 +80,7 @@ ol {
             }
         }
     }
-     .dropdown > button{
+     .dropdown > button, .btn-group-menu-options > button{
         margin: 5px;
      }
 }
